# web-sw-cor24-demos

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  index.html
.agentrail/: instruction-lock.toml  plan.md  saga.toml
docs/: ai_agent_instructions.md  architecture.md  design.md  language-building-tech.md  mermaid-diagram2.mmd  plan.md  prd.md
pages/: components-21db36e7d204c23.css  components-3c130460388ad9d0.css  components-42727f844554026e.css  components-467dbfd3bef0a5ab.css  components-4fba74af3c48c618.css  components-513bce84e8392de5.css  components-61093c8ff82dacf7.css  components-9a2853580c9ee30e.css  components-ab02d257ff313549.css  components-abf07ad37a929b3f.css  components-b5181f29f099137a.css  components-b85b704a5c352435.css  components-e33c91c216710d1f.css  components-e714b69169a1e86e.css  components-f597703b2b002721.css  hardware-d81f370e94426489.css  index.html  isa-1702b3ce97277c0f.css  isa-212c2b482c638265.css  isa-2e25301ed28f0024.css  isa-4f4a60ae277fa1c7.css  isa-84cf9c6dcc4d3e12.css  isa-c5144f046f955a2.css  web-sw-cor24-demos-10080630cbc1e194_bg.wasm  web-sw-cor24-demos-113da8ba57bc598d_bg.wasm  web-sw-cor24-demos-18bc06845cd1ab43_bg.wasm  web-sw-cor24-demos-19884bbcfdbd2eeb_bg.wasm  web-sw-cor24-demos-1bb2ce4f53b09e23_bg.wasm  web-sw-cor24-demos-1c16f64ab85186f6_bg.wasm  web-sw-cor24-demos-1d0719fe3982b927_bg.wasm  web-sw-cor24-demos-1e93a5e44100108f_bg.wasm  web-sw-cor24-demos-214953b55310face_bg.wasm  web-sw-cor24-demos-22b6b6d8b017f453_bg.wasm  web-sw-cor24-demos-28f91da37557328e_bg.wasm  web-sw-cor24-demos-2c6c03b3fbe984a1.js  (+120 more)
(+147 files in other folders)
